--- a/box.html
+++ b/box.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="nav-container">
-            <div class="first-nav"><a href="card.html" target="_self">Flex Box</a></div>
+            <div class="first-nav"><a href="index.html" target="_self">Flex Box</a></div>
             <div class="sec-nav"><a href="box.html" target="_self">Grid Box</a></div>
         </div>
     </header>    
